--- a/_posts/2017-08-18-mle.markdown
+++ b/_posts/2017-08-18-mle.markdown
@@ -9,37 +9,42 @@ comments: True
 
 ## Maximum Likelihood Estimation of Gaussian Parameters $$[\mu,\Sigma]$$
 
+<br><br>
 
 ### The Big Picture
   
-Practically speaking, we have data with labels, and we want to take some new data, and classify it with the labels from the old data. For example, in the below images, we see (LEFT) data with two labels, and (RIGHT) unlabeled data. We want to be able to categorize each point from the new data as belonging to either the `blue` group or the `yellow` group.
+Maximum Likelihood Estimation (MLE) is a tool we use to accomplish a very common task. The task is to create a good statistical model, using information from some data that we have. The model can be a classifier, regression model, or something else, so the nature of the task is not what's most important. What's most important is that MLE helps us exploit existing data to build a _good_ model, by making the model _fit_ the data.
 
-<img src="/misc/figs/mle_1.png" align="left" style="width: 350px;"/>
-<img src="/misc/figs/mle_2.png" align="right" style="width: 350px;"/>
-
-
-Labeled training data (\textsc{left}) and unlabeled new data (\textsc{right})
-
+Today, we're talking about MLE for Gaussians, so this is going to be a classification task. That is, we have data with labels, and we want to take some new data, and classify it, _using the labels from the old data_. For example, in the below images, we see data with two labels (**left**), and new, unlabeled data (**right**). We want to be able to categorize each point from the new data as belonging to either the `blue` group or the `yellow` group.
 
 Labeling dots as either `blue` or `yellow` sounds pretty boring, but the same idea applies to labeling emails as `spam` or `regular` or classifying audio clips as the vowel `[a]` or the vowel `[o]`.
+
+<br><br>
+<img src="/misc/figs/mle_1.png" align="left" style="width: 350px;"/>
+<img src="/misc/figs/mle_2.png" align="right" style="width: 350px;"/>
+<center>Labeled training data (<b>left</b>) and unlabeled new data (<b>right</b>)</center>
+<br><br>
+
 
 To accomplish that task, we build a statistical model, learning its shape from the old labeled data. For example, for the above data we could build two models (eg. GMMs), a `blue` model and a `yellow` model, and then see which model is more similar to a new data point. Another approach would be to build a single model (eg. a neural net) that distinguishes `blue` points from `yellow` points, and then see how it categorizes a new point. Here, we're working here with the former approach (build two models).
 
 
+<br><br>
 <img src="/misc/figs/mle_model_2.png" align="right" style="width: 350px;"/>
 <img src="/misc/figs/mle_model_1.png" align="left" style="width: 350px;"/>
+<center>Yellow Model (<b>left</b>) Blue Model (<b>right</b>)</center>
+<br><br>
 
-
-Yellow Model (\textsc{left}) Blue Model (\textsc{right})
-
-We assume the data was in a sense _generated_ by some process, and we're try to model what that process was. This is called the generative approach. The model we're trying to learn is an approximation of the underlying process that created the data in the first place. So our data is just a sample from a process, and we want to learn the process.
+We assume the data was in a sense _generated_ by some process, and we're try to model what that process was. This is called the [generative approach](https://en.wikipedia.org/wiki/Generative_model). The model we're trying to learn is an approximation of the underlying process that created the data in the first place. So our data is just a sample from a process, and we want to learn the process.
 
 At the end of the day, once we have our two models, we will use them to find which model was more likely to have _generated_ a new data point. To take the leap from data $$\rightarrow$$ model, we need to be able to not only estimate the parameters of the model (eg. for Gaussians we need $$[\mu, \Sigma]$$), but we want to estimate them to get the BEST model possible for our data. That's were MLE comes into play.
 
 
+<br><br>
+
 ### MLE
 
-MLE is one flavor of parameter estimation in machine learning, and in to perform parameter estimation, we need:
+MLE is one flavor of parameter estimation in machine learning, and in order to perform parameter estimation, we need:
 
 1. some data $$\mathbf{X}$$
 2. some hypothesized generating function of the data $$f(\mathbf{X},\theta)$$
@@ -52,6 +57,7 @@ In MLE, the objective function (evaluation) we chose is the _likelihood_ of the 
 $$\theta_{MLE} = \underset{\theta}{\operatorname{argmax}} p(\mathbf{X}|\theta)$$
 
 
+<br><br>
 
 ### MLE for a Gaussian
 
@@ -190,6 +196,8 @@ To get the $${\operatorname{argmax}}$$ for each parameter we have to do two thin
 
 By doing step (1), we get an equation for the change of the function, and we know that if the function isn't changing at a certain point, that point is a maximum or a minimum. Since we're working with a Gaussian function, we already know ahead of time that there is one and only one maximum, and there is no minimum! Easy as that!
 
+<br><br>
+
 ### MLE of $$\mu$$
 
 First we'll work to solve for the mean of our Gaussian, $$\mu$$. Remember we've got our likelihood function in a simple form:
@@ -290,13 +298,11 @@ Huzzah! We've reached the promised land! We now have a formula we can use to est
 
 We want to take that data and make some models which we think represent that data well. In our case we are learning two Gaussian models, one for the `yellow` data and one for the `blue` data:
 
-
+<br><br>
 <img src="/misc/figs/mle_model_2.png" align="right" style="width: 350px;"/>
 <img src="/misc/figs/mle_model_1.png" align="left" style="width: 350px;"/>
-
-
-Yellow Model (\textsc{left}) Blue Model (\textsc{right})
-
+<center>Yellow Model (<b>left</b>) Blue Model (<b>right</b>)</center>
+<br><br>
 
 
 To make our Gaussians fit the data as well as we can, we can do two things: (1) move the center of the curve or (2) adjust the width of the peak. Right now, with $$\mu$$ we're only talking about the placement of the center of the curve, we're not talking at all about its width.
@@ -305,6 +311,8 @@ Where is the best place to put a bell curve to cover all our data? Well, how abo
 
 Sure enough, if you take a look at the data, you'll see that the `yellow` data is grouped around the point `[-1,-1]` and that the `blue` data points are all clustered around `[1,1]`. Now take a look at the models we've made. You'll see that the center of the peak for the `yellow` model is somewhere near  `[-1,-1]` and that the peak of the `blue` model is around `[1,1]`.
 
+
+<br><br>
 
 ### MLE of $$\sigma^{2}$$
 
