--- a/_posts/2017-08-18-mle.markdown
+++ b/_posts/2017-08-18-mle.markdown
@@ -10,15 +10,13 @@ comments: True
 
 ## The Big Picture
   
-[Maximum Likelihood Estimation](https://en.wikipedia.org/wiki/Maximum_likelihood_estimation) (MLE) is a tool we use to accomplish a _very_ common task in machine learning.
+[Maximum Likelihood Estimation](https://en.wikipedia.org/wiki/Maximum_likelihood_estimation) (MLE) is a tool we use in machine learning to acheive a _very_ common goal. The goal is to create a statistical model, which is able to perform some task on _yet unseen data_.
 
-The task is to create a good statistical model, using information from some data. The model can be a [classifier](https://en.wikipedia.org/wiki/Statistical_classification), [regression model](https://en.wikipedia.org/wiki/Regression_analysis), or something else, so the nature of the task is not what's most important in defining MLE. The key, defining characteristic of MLE is that it helps us exploit existing data to build a _good_ model, by making the model _fit_ the data, _only_ using the data.[^1]
+The task might be [classification](https://en.wikipedia.org/wiki/Statistical_classification), [regression](https://en.wikipedia.org/wiki/Regression_analysis), or something else, so the nature of the task does not define MLE. The defining characteristic of MLE is that it uses _only existing data_ to estimate parameters of the model. This is in contrast to approaches which exploit _prior knowledge_ in addition to existing data.[^1]
 
 [^1]: For another approach to parameter estimation using not only information from the data, but a prior bias, see [Maximum A Posteriori estimation](https://en.wikipedia.org/wiki/Maximum_a_posteriori_estimation).
 
-Today, we're talking about MLE for [Gaussians](https://en.wikipedia.org/wiki/Normal_distribution), so this is going to be a classification task. That is, we have data with labels, and we want to take some new data, and classify it, _using the labels from the old data_. For example, in the below images, we see data with two labels (**left**), and new, unlabeled data (**right**). We want to be able to categorize each point from the new data as belonging to either the `purple` group or the `yellow` group.
-
-Labeling dots as either `purple` or `yellow` sounds pretty boring, but the same idea applies to labeling emails as `spam` or `regular` or classifying audio clips as the vowel `[a]` or the vowel `[o]`.
+Today, we're talking about MLE for [Gaussians](https://en.wikipedia.org/wiki/Normal_distribution), so this is going to be a classification task. That is, we have data with labels, and we want to take some new data, and classify it _using the labels from the old data_. In the below images, we see data with labels (left), and new, unlabeled data (right). We want to be able to categorize each point from the `new data` as belonging to either the `purple` group or the `yellow` group.
 
 <br><br>
 <img src="/misc/figs/mle_1.png" align="left" style="width: 350px;"/>
@@ -26,20 +24,32 @@ Labeling dots as either `purple` or `yellow` sounds pretty boring, but the same 
 <center>Labeled training data (<b>left</b>) and unlabeled new data (<b>right</b>)</center>
 <br><br>
 
+Labeling dots as either `purple` or `yellow` sounds pretty boring, but the same idea applies to [labeling emails](http://jrmeyer.github.io/tutorial/2016/02/01/TensorFlow-Tutorial.html) as `spam` or `ham` or classifying audio clips as the vowel `[a]` or the vowel `[o]`.
 
-To accomplish that task, we build a statistical model, learning its shape from the old labeled data. For example, for the above data we could build two models (i.e. 2-D Gaussians), a `purple` model and a `yellow` model, and then see which model is more similar to a new data point. Another approach would be to build a single model (eg. a neural net) that distinguishes `purple` points from `yellow` points, and then see how it categorizes a new point.[^2] Here, we're working here with the former approach (build two models and see which one fits better).
+To make this post more tasty, let's pretend we're classifying `skittles` as `purple` or `yellow`.[^2] We're classifying these skittles based on two dimensions `[x,y]`. Let's say the skittles have been rated by expert skittle-sommeliers on two traits: `x = aromatic lift` and `y = elegance`.
 
-[^2]: This is an example of a [discriminative](https://en.wikipedia.org/wiki/Discriminative_model) model, as opposed to a [generative](https://en.wikipedia.org/wiki/Generative_model) model. The classification approach described here is the latter approach.
+[^2]: I have no sponsorship from Skittles, the Wrigley Company, or Mars, Inc. All the views expressed in this post are my own. However, if they would like to throw some cash my way, I would not be upset.
+
+As you can see, `purple skittles` have bad ratings on both aromatic lift and elegance, whereas `yellow skittles` have been highly rated on both traits. Since these ratings are from expert skittle-sommeliers, they must be true.
+
+To get our new, unlabeled data, we've given some new skittles to our expert sommeliers in a blind taste test. That is, the experts don't know what they ate, and neither do we. The only information available for each skittle is its rating on `aromatic lift` and `elegance`.
+
+
+Now, we want to take ratings for each `mystery skittle` and figure out if it was a `purple skittle` or `yellow skittle`. To accomplish this task, we build a statistical model, learning its shape from the old ratings (i.e. the labeled data).
+
+For the above data we can build two models (i.e. 2-D Gaussians), a `purple skittle model` and a `yellow skittle model`, and then see which model is more similar to a new rating on a `mystery skittle`. Another approach would be to build a single model (eg. a neural net) that distinguishes `purple skittles` from `yellow skittles`, and then see how it categorizes each `mystery skittle`.[^3] Here, we're working with the former approach (build two models and see which one fits better).
+
+[^3]: This is an example of a [discriminative](https://en.wikipedia.org/wiki/Discriminative_model) model, as opposed to a [generative](https://en.wikipedia.org/wiki/Generative_model) model. The classification approach described here is the latter approach.
 
 <br><br>
 <img src="/misc/figs/mle_model_2.png" align="left" style="width: 350px;"/>
 <img src="/misc/figs/mle_model_1.png" align="right" style="width: 350px;"/>
-<center>Purple Model (<b>left</b>) Yellow Model (<b>right</b>)</center>
+<center>Purple Skittle Model (<b>left</b>) Yellow Skittle Model (<b>right</b>)</center>
 <br><br>
 
-We assume the data was in a sense _generated_ by some process, and we're try to model what that process was. This is called the [generative approach](https://en.wikipedia.org/wiki/Generative_model). The model we're trying to learn is an approximation of the underlying process that created the data in the first place. So our data is just a sample from a process, and we want to learn the process.
+We assume the data was in a sense _generated_ by some process, and we're trying to model what that process was. This is called the [generative approach](https://en.wikipedia.org/wiki/Generative_model). The model we're trying to learn is an approximation of the underlying process that created the data in the first place. So our data is just a sample from a process, and we want to learn the process.
 
-At the end of the day, once we have our two models, we will use them to find which model was more likely to have _generated_ a new data point. To take the leap from data $$\rightarrow$$ model, we need to be able to not only estimate the parameters of the model (eg. for Gaussians we need $$[\mu, \Sigma]$$), but we want to estimate them to get the _best_ model possible for our data. That's were MLE comes into play.
+At the end of the day, once we have our two models, we will use them to find which model was more likely to have _generated_ the new data point. To take the leap from data $$\rightarrow$$ model, we need to not only estimate possible parameters of the model (eg. for Gaussians we need $$[\mu, \Sigma]$$), but we want the _best_ model possible for our data. That's where MLE comes into play.
 
 
 <br><br>
@@ -126,7 +136,7 @@ $$\begin{align}
 \end{align}$$
 
 
-Now, with this simplification, we can take a look at now our fully specified log likelihood function that we'll be working with from here on out. 
+Now, with this simplification, we can take a look at our fully specified log likelihood function that we'll be working with from here on out. 
 
 
 $$\begin{align}
@@ -159,7 +169,7 @@ $$\begin{align}
                   \Big(-\frac{1}{2} \big(\frac{(x_{n} - \mu)^{2}}{\sigma^{2}} \big) \cdot \log(e) \Big) \Big)\\
 \end{align}$$
 
-We're now going to be explicit that the $$\log()$$ function we used was base $$e$$. This allows use to simplify $$\log_{e}(e) = 1$$ as well as $$\log(1) = 0$$ (regardless of base).
+We're now going to be explicit that the $$\log()$$ function we used was base $$e$$. This allows us to simplify $$\log_{e}(e) = 1$$ as well as $$\log(1) = 0$$ (regardless of base).
 
 $$\begin{align}
   \mathcal{LL} &= \sum\limits_{n=1}^{N} \Big( \log(1) - \log \big( \sqrt{2\pi\sigma^{2}} \big) +
@@ -184,9 +194,7 @@ $$\begin{align}
   &= - \frac{N}{2} \log ( 2\pi\sigma^{2} )  -\frac{1}{2\sigma^{2}} \sum\limits_{n=1}^{N} (x_{n} - \mu)^{2} \\
 \end{align}$$
 
-Now we have our log likelihood function ($$\mathcal{LL}$$) in a nice, easy to work with form. So far all we've done is simplify the original equation, we haven't even started trying to find our best parameters. Remember how we started with the goal that we want to find the best parameters via $$\operatorname{argmax}()$$? Well, now were going to do that.
-
-To put it in another way, we're doing MLE: Maximum Likelihood Estimation. All we've done so far is get the _likelihood_ in a nice form, now we need to _estimate_ it's _maximum_ for our parameters. We've got the $$\mathcal{LL}$$ ready for $$\underset{\theta}{\operatorname{argmax}}(\mathcal{LL})$$, now we need to do the $$\underset{\theta}{\operatorname{argmax}}$$ part. This is where we get a little help from our friends, partial derivatives. We need _partial_ derivatives because our $$\theta$$ is really two variables $$[\mu, \sigma^{2}]$$, and we need the best value for each.
+Now we have our log likelihood function ($$\mathcal{LL}$$) in a nice, easy to work with form. Now we need to take the ($$\mathcal{LL}$$) and _estimate_ it's _maximum_ for our parameters. We've got the $$\mathcal{LL}$$ ready for $$\underset{\theta}{\operatorname{argmax}}(\mathcal{LL})$$, now we need to do the $$\underset{\theta}{\operatorname{argmax}}$$ part. This is where we get a little help from our friends, partial derivatives. We need _partial_ derivatives because our $$\theta$$ is really two variables $$[\mu, \sigma^{2}]$$, and we need the best value for each.
 
 So, now we're going to solve the problem for each variable one-by-one:
 
@@ -195,7 +203,10 @@ $$\begin{align}
   \underset{\sigma^{2}}{\operatorname{argmax}} \mathcal{LL}(X|\mu, \sigma^{2})
 \end{align}$$
 
-To get the $${\operatorname{argmax}}$$ for each parameter we have to do two things. First, we must (1) derive the partial derivative of the function with respect to that parameter, and then (2) set that partial derivative to zero, and solve for our parameter.
+To get the $${\operatorname{argmax}}$$ for each parameter we have to do two things. First, we must:
+
+1. derive the partial derivative of the function with respect to that parameter, and then
+2. set that partial derivative to zero, and solve for our parameter
 
 By doing step (1), we get an equation for the change of the function, and we know that if the function isn't changing at a certain point, that point is a maximum or a minimum. Since we're working with a Gaussian function, we already know ahead of time that there is one and only one maximum, and there is no minimum! Easy as that!
 
@@ -300,12 +311,12 @@ Huzzah! We've reached the promised land! We now have a formula we can use to est
 <img src="/misc/figs/mle_1.png" style="width: 350px;" align="middle"/>
 <br>
 
-We want to take that data and make some models which we think represent that data well. In our case we are learning two Gaussian models, one for the `yellow` data and one for the `purple` data:
+We want to take that data and make some models which we think represent that data well. In our case we are learning two Gaussian models, one for the `yellow skittle` data and one for the `purple skittle` data:
 
 <br><br>
 <img src="/misc/figs/mle_model_2.png" align="left" style="width: 350px;"/>
 <img src="/misc/figs/mle_model_1.png" align="right" style="width: 350px;"/>
-<center>Purple Model (<b>left</b>) Yellow Model (<b>right</b>)</center>
+<center>Purple Skittle Model (<b>left</b>) Yellow Skittle Model (<b>right</b>)</center>
 <br><br>
 
 
@@ -313,7 +324,10 @@ To make our Gaussians fit the data as well as we can, we can do two things: (1) 
 
 Where is the best place to put a bell curve to cover all our data? Well, how about the center of our data! Dead-center, bull's eye, whatever you call it, we're putting our Gaussian right in the middle of it all (the mean). We're taking all our points, summing them up, and dividing by the number of data points. This is the _average_, and it is (for the likelihood function) the best place to put the mean of our model.
 
-Sure enough, if you take a look at the data, you'll see that the `yellow` data is grouped around the point `[-1,-1]` and that the `purple` data points are all clustered around `[1,1]`. Now take a look at the models we've made. You'll see that the center of the peak for the `yellow` model is somewhere near  `[-1,-1]` and that the peak of the `purple` model is around `[1,1]`.
+Getting back to the skittles, the center of the curve $$[\mu_{x},\mu_{y}]$$ for our `yellow skittle model` comes directly from our sommeliers' ratings (i.e. $$[\mu_{x}]$$ =  average rating for `aromatic lift` and $$[\mu_{y}]$$ = average rating for `elegance`). Our `purple skittle model` was centered in the exact same way.
+
+Sure enough, if you take a look at the data, you'll see that the `yellow skittle` data is grouped around the point `[-1,-1]` and that the `purple skittle` data points are all clustered around `[1,1]`. Now take a look at the models we've made. You'll see that the center of the peak for the `purple skittle model` is somewhere near  `[-1,-1]` and that the peak of the `yellow skittle model` is around `[1,1]`.
+
 
 
 <br><br>
@@ -412,7 +426,13 @@ We're iterating over each data point ($$x_{n}$$) and finding its particular devi
 
 Just as when we were finding the best $$\mu$$ for our Gaussian by setting it to the average ($$\mu$$) of the data, we're now setting our standard deviation to be, well, the _standard_ deviation of the data! Think of _standard_ as being a synonym to _average_, and it becomes pretty clear.
 
+Thinking back to the `skittles`, what we've done here is taken each skittle, one-by-one, and figured out how far it deviates from the mean on a certain rating. For example, we know that on average, our expert sommeliers rated `purple` skittles to have a `[-1]` score for `elegance`. However, not every `purple skittle` got a score of `[-1]`. Each skittle deviated from that average, and if we add up how much each skittle deviated (after squaring), we with the average deviation. Take a look again at our skittle data:
 
+<br>
+<img src="/misc/figs/mle_1.png" style="width: 350px;" align="middle"/>
+<br>
+
+Specifically, look at the `purple skittles`. You see the purple skittle that got a rating of about `[0,-2]`? That skittle had pretty horrible `elegance` and better-than-average `aromatic lift`. This skittle obviously _deviated_ from the normal rating. We take this skittle along with every other, calculate that deviation, and get our $$\sigma^2$$ for our model.
 
 <br><br>
 
