redirecting broken links

--- a/_posts/2016-08-04-Sox-Notes.markdown
+++ b/_posts/2016-08-04-Sox-Notes.markdown
@@ -4,6 +4,7 @@ title:  "Some SoX(I) Notes"
 date:   2016-08-02
 categories: misc
 comments: True
+redirect_from: "/sox/2016/08/02/Sox-Notes.html"
 ---
 
 [Here's another blog.][blog1]
