--- a/_posts/2017-11-09-nnet3-notes.markdown
+++ b/_posts/2017-11-09-nnet3-notes.markdown
@@ -4,6 +4,7 @@ title:  "Kaldi nnet3 notes"
 date:   2017-11-09
 categories: ASR
 comments: True
+redirect_from: "/kaldi/2017/11/09/nnet3-notes.html"
 ---
 
 <img src="/misc/kaldi_text_and_logo.png" align="right" alt="logo" style="width: 400px;"/>
